@@ -232,17 +232,17 @@ public class PseudoServerTest extends TestCase {
     public void testRefererHeader() throws Exception {
         String resourceName = "tellMe";
         String linkSource = "fromLink";
-	String formSource = "fromForm";
+	    String formSource = "fromForm";
 	
         PseudoServer ps = new PseudoServer();
         int port = ps.getConnectedPort();
 
         String page0 = "http://localhost:" + port + '/' + resourceName;
-	String page1 = "http://localhost:" + port + '/' + linkSource;
-	String page2 = "http://localhost:" + port + '/' + formSource;
+	    String page1 = "http://localhost:" + port + '/' + linkSource;
+	    String page2 = "http://localhost:" + port + '/' + formSource;
 	
         ps.setResource( linkSource, "<html><head></head><body><a href=\"tellMe\">Go</a></body></html>" );
-	ps.setResource( formSource, "<html><body><form action=\"tellMe\"><input type=submit></form></body></html>" );
+	    ps.setResource( formSource, "<html><body><form action=\"tellMe\"><input type=submit></form></body></html>" );
 
         try {
             ps.setResource( resourceName, new PseudoServlet() {
@@ -257,13 +257,13 @@ public class PseudoServerTest extends TestCase {
             assertEquals( "Content type", "text/plain", response.getContentType() );
             assertEquals( "Default Referer header", "null", response.getText().trim() );
 
-	    response = wc.getResponse( page1 );
-	    response = wc.getResponse( response.getLinks()[0].getRequest() );
-	    assertEquals( "Link Referer header", page1, response.getText().trim() );
-
-	    response = wc.getResponse( page2 );
-	    response = wc.getResponse( response.getForms()[0].getRequest() );
-	    assertEquals( "Form Referer header", page2, response.getText().trim() );
+    	    response = wc.getResponse( page1 );
+    	    response = wc.getResponse( response.getLinks()[0].getRequest() );
+    	    assertEquals( "Link Referer header", page1, response.getText().trim() );
+    
+    	    response = wc.getResponse( page2 );
+    	    response = wc.getResponse( response.getForms()[0].getRequest() );
+    	    assertEquals( "Form Referer header", page2, response.getText().trim() );
         } finally {
             ps.shutDown();
         }
